--- a/package.json
+++ b/package.json
@@ -1,4 +1,6 @@
 {
+  "name": "nextjs-blog",
+  "version": "0.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -6,8 +8,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "clsx": "^2.0.0",
     "next": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.15",
+    "postcss": "^8.4.28",
+    "tailwindcss": "^3.3.3"
   }
 }
