--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-dom": "^18.2.0",
     "remark": "^14.0.3",
     "remark-html": "^15.0.2",
-    "sharp": "^0.32.5"
+    "sharp": "^0.32.5",
+    "zustand": "^4.3.7"
   },
   "devDependencies": {
     "@types/node": "^20.5.1",
