--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "remark": "^14.0.3",
     "remark-html": "^15.0.2",
     "sharp": "^0.32.5",
+    "swr": "^2.2.2",
     "zustand": "^4.3.7"
   },
   "devDependencies": {
