--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "date-fns": "^2.30.0",
     "gray-matter": "^4.0.3",
     "next": "^13.4.19",
+    "next-auth": "^4.23.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "remark": "^14.0.3",
